Load static GIO modules directly instead of going through dlopen() on the executable

This requires updating iOS projects, but before this change
the static GIO modules couldn't be loaded at all anyway so
it shouldn't affect any existing project.

https://bugzilla.gnome.org/show_bug.cgi?id=725202