data/xcode/templates/ios/GStreamer Base.xctemplate/gst_ios_init.h
@@ -5,6 +5,16 @@
 
 G_BEGIN_DECLS
 
+#ifndef G_IO_MODULE_DECLARE
+#define G_IO_MODULE_DECLARE(name) \
+extern void G_PASTE(g_io_module_, G_PASTE(name, _load_static)) (void)
+#endif
+
+#ifndef G_IO_MODULE_LOAD
+#define G_IO_MODULE_LOAD(name) \
+G_PASTE(g_io_module_, G_PASTE(name, _load_static)) ()
+#endif
+
 /* Uncomment each line to enable the plugin categories that your application needs.
  * You can also enable individual plugins. See gst_ios_init.c to see their names
  */
